--- a/templates/actor/heading/status.hbs
+++ b/templates/actor/heading/status.hbs
@@ -59,7 +59,7 @@
                     <input style="height:20px"  
                     type="number"
                     class="numberwithbuttons"
-                    name="system.stamina.modifiers"
+                    name="system.stamina.temp"
                     value="{{ stamina.temp }}" />            
                 </tr>
             </table>
