--- a/templates/actor/items/combat-actions.hbs
+++ b/templates/actor/items/combat-actions.hbs
@@ -9,7 +9,7 @@
 
     </tr>
     <tr>
-        <td class="condition" data-condition="Escape_a_Grapple">Escape a Grapple</td>
+        <td class="condition" data-condition="Escape_a_Grapple">Escape Grapple</td>
         <td data-apusage="5" class="fakebutton">5 AP</td>
 
         <td class="condition" data-condition="Grapple">Grapple</td>
@@ -29,7 +29,7 @@
         <td data-apusage="3" class="fakebutton">3 AP</td>
     </tr>
     <tr>
-        <td class="condition" data-condition="Equip_a_Weapon">Equip a Weapon</tdclass="condition">
+        <td class="condition" data-condition="Equip_a_Weapon">Equip Weapon</tdclass="condition">
         <td data-apusage="3" class="fakebutton">3 AP</td>
 
         <td class="condition" data-condition="Ready">Ready</td>
@@ -46,11 +46,11 @@
         <td class="condition" data-condition="Dodge">Dodge</td>
         <td data-apusage="6" class="fakebutton">6 AP</td>
 
-        <td class="condition" data-condition="Stand_Up_From_Prone">Stand from Prone</td>
+        <td class="condition" data-condition="Stand_Up_From_Prone">Stand Up</td>
         <td data-apusage="5" class="fakebutton">5 AP</td>
     </tr>
     <tr>
-        <td class="condition" data-condition="Stow_a_Weapon">Stow a Weapon</td>
+        <td class="condition" data-condition="Stow_a_Weapon">Stow Weapon</td>
         <td data-apusage="3" class="fakebutton">3 AP</td>
 
         <td class="condition" data-condition="Take_Cover">Take Cover</td>
@@ -60,7 +60,7 @@
         <td class="condition" data-condition="Unarmed_Strike">Unarmed Strike</td>
         <td data-apusage="3" class="fakebutton">3 AP</td>
 
-        <td class="condition" data-condition="Use_a_Chem">Use a Chem</td>
+        <td class="condition" data-condition="Use_a_Chem">Use Chem</td>
         <td data-apusage="4" class="fakebutton">4 AP</td>
     </tr>
 </table>
