NPC cleanup and Rest Button Creation

--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -454,7 +454,7 @@ td,
 .sheet .status-info-value {
   font-size: 10pt;
 }
-.sheet. table .status-table {
+.sheet table .status-table {
   vertical-align: top;
 }
 .sheet .perk-table td {
