Updated targeted-attack conditions
Also adjusted the template and schema for conditions and consumables.

--- a/templates/actor/dialog/targeted-attack.hbs
+++ b/templates/actor/dialog/targeted-attack.hbs
@@ -13,6 +13,7 @@
         <div class="groin"><button data-tooltip="Groin (+3AP)" name="groin"></button></div>
         <div class="left-leg"><button data-tooltip="Leg (+2AP)" name="leg"></button></div>
         <div class="right-leg"><button data-tooltip="Leg (+2AP)" name="leg"></button></div>
+        <p><a class="content-link" draggable="false" data-link="" data-uuid="Compendium.arcane-arcade-fallout.properties.Item.31qCwzre2jXqsj8Y" data-id="31qCwzre2jXqsj8Y" data-type="Item" data-pack="arcane-arcade-fallout.conditions" data-tooltip="Click for details.">Targeted Attacks</a></p>
     </div>
   </form>
 </div>
